--- a/styleguide/source/assets/scss/03-organisms/_featured-case.scss
+++ b/styleguide/source/assets/scss/03-organisms/_featured-case.scss
@@ -1,8 +1,5 @@
 .joe__featured-case {
   @extend %clearfix;
-  border-bottom: 1px solid $black-20;
-  padding-bottom: 2em;
-  margin-bottom: 2em;
 }
 
 .joe__featured-case__link {
